css/styles.css
/* ... */
#mainNav .navbar-nav .nav-item:active, #mainNav .navbar-nav .nav-item:focus {
  outline: none;
  background-color: transparent;
}
@media (min-width: 992px) {
  #mainNav {
    padding-top: 0;
    padding-bottom: 0;
    border-bottom: none;
    background-color: transparent;
    box-shadow: none;
    transition: background-color 0.3s ease-in-out;
  }
  
  #mainNav .nav-link {
    transition: none;
    padding: 2rem 1.5rem;
    color: rgb(17, 17, 17);
  }
  #mainNav .nav-link:hover {
    color: rgba(17, 17, 17, 0.75);
  }
  #mainNav .nav-link:active {
    color: #fff;
  }
  #mainNav.navbar-shrink {
    background-color: rgba(255,255,255, 0.85);
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.15);
  }
  #mainNav.navbar-shrink .navbar-brand {
    color: var(--bs-gray-900);
  }
  #mainNav.navbar-shrink .nav-link {
    color: #000;
    padding: 1.5rem 1.5rem 1.25rem;
    border-bottom: 0.25rem solid transparent;
  }
  #mainNav.navbar-shrink .nav-link:hover {
    color: #7EA19F;
  }
  #mainNav.navbar-shrink .nav-link:active {
    color: #7EA19F;
  }
  #mainNav.navbar-shrink .nav-link.active {
    color: #7EA19F;
    outline: none;
    border-bottom: 0.5rem solid #7EA19F;
  }
}

.masthead {
  position: relative;
  width: auto;
  padding: 15rem 0;
  background: url("../assets/img/bg_main.png");
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: scroll;
  background-size: cover;
}
.masthead h1, .masthead .h1 {
  font-family: 'IBM Plex Serif', sans-serif !important;
  font-weight: 700;
  font-size: 4rem;
  letter-spacing: 0.05rem !important;
  background: black;
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
          background-clip: text;
}
.masthead h2, .masthead .h2 {
  max-width: 20rem;
  font-size: 1rem;
  font-weight: 500 !important;
}
@media (max-width: 576px) {
  .masthead h1, .masthead .h1 {
    font-size: 3.5rem;
    line-height: 3.5rem;
  }
}
@media (min-width: 992px) {
  .masthead {
    height: 88vh;
    padding: 0;
  }
  .masthead h1, .masthead .h1 {
    font-size: 6.5rem;
    line-height: 6.5rem;
    letter-spacing: 0.8rem;
  }
  .masthead h2, .masthead .h2 {
    max-width: 30rem;
    font-size: 1.25rem;
  }
}

.aboutMeTag {
  font-family: 'IBM Plex Serif', sans-serif !important;
  font-style: normal !important;
  font-weight: 700 !important;
  font-size: 2.15rem;
  line-height: 1rem;
  letter-spacing: 0.25px;
}

@media (max-width: 992px) {
  .aboutMeTag {
    font-size: 1.75rem;
    line-height: 2.15rem;
  }
}

.aboutMeBody {
  font-family: 'Poppins', sans-serif;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5rem;
}

.about-section {
  padding-top: 10rem;
  background: linear-gradient(to bottom, #000 0%, rgba(0, 0, 0, 0.9) 75%, rgba(0, 0, 0, 0.8) 100%);
}
.about-section p {
  margin-bottom: 5rem;
}

.projects-section {
  padding: 8rem 0 2rem 0;
}

.projects-section .featured-text-right {
  padding: 0 0 0 6rem;
}
.projects-section .featured-text-left {
  padding: 0 6rem 0 0;
}

@media (max-width: 991.98px) {
  .projects-section .featured-text-right,
  .projects-section .feature-text-left {
    padding: 0 !important;
  }
}

/* @media (min-width: 992px) {
  .projects-section .featured-text {
    padding: 0 0 0 2rem;
    border-left: 0.5rem solid #7EA19F;
  }
}

 .projects-section .project-text {
  padding: 3rem;
  font-size: 90%;
}

@media (min-width: 992px) {
  .projects-section .project-text {
    padding: 5rem;
  }
  .projects-section .project-text hr {
    border-color: #7EA19F;
    border-width: 0.25rem;
    width: 30%;
  }
} */

.leadingLine,
.leadingLine-white {
    width: 100%;
    letter-spacing: 1px;
}
.leadingLine::before {
    content: "";
    display: inline-block;
    width: 50px;
    height: 1px;
    background: #7B7B7B;
    vertical-align: top;
    margin-top: 11px;
    margin-right: 10px;
}
.leadingLine-white::before {
    content: "";
    display: inline-block;
    width: 50px;
    height: 1px;
    background: #7B7B7B;
    vertical-align: top;
    margin-top: 11px;
    margin-right: 10px;
}

.UXCase {
  margin: 0 0 12.5rem 0;
}

@media (max-width: 992px) {
  .UXCase {
    margin: 0 0 8rem 0;
  }
}

.UXCaseTitle {
  margin: 2rem 0 1.5rem 0;
  font-family: "Poppins", sans-serif;
  font-weight: 600;
  letter-spacing: 0.25px;
  font-size: 1.55rem;
}

@media (max-width: 992px) {
  .UXCaseTitle {
    font-size: 1.3rem;
    margin: 1rem 0 0.75rem 0;
  }
}

img.UXCaseImg {
  cursor: pointer;
  width: 100%;
  height: auto;
  -webkit-animation-delay: 0.25s !important;
  animation-delay: 0.25s !important;
  -webkit-transition: all 0.65s;
  -o-transition: all 0.65s;
  transition: all 0.65s;
  filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.15)) drop-shadow(0px 4px 8px rgba(0, 0, 0, 0.25)); 
}

img.UXCaseImg:hover {
  -webkit-transform: scale(1.05);
  -ms-transform: scale(1.05);
  transform: scale(1.05);
  filter: drop-shadow(0px 0px 10px rgba(0, 0, 0, 0.25)) drop-shadow(0px 5px 10px rgba(0, 0, 0, 0.35)); 
}

/* .UXCaseImg-right {
  padding-left: 60px;
}

.UXCaseImg-left {
  padding-right: 60px;
}

@media (max-width: 992px) {
  .UXCaseImg-left, .UXCaseImg-right {
    padding: 0px !important;
  }
} */

div.UXCaseLabel {
  flex-direction: row;
  align-items: center;
  display: flex;
}

.UXCaseLabel .UXCaseTag {
  color: #9D9D9D;
  border: 1px solid #9D9D9D;
  font-family: 'Lato', sans-serif;
  font-weight: 600;
  font-size: 15px;
  line-height: 18px;
  letter-spacing: 0.25px;
  border-radius: 5px;
  padding: 4px 10px;
  margin: 0 8px 0 0;
}

@media (max-width:1200px) {
  .UXCaseTag {
    padding: 4px 4px !important;
    margin: 0 4px 0 0 !important;
  }
}

.contact-section {
  padding-top: 5rem;
}
.contact-section .card {
  border: 0;
  border-bottom: 0.25rem solid #7EA19F;
}
/* ... */

